create a new project

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,17 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Color Schemes
+$mint-green: #8CFF98;
+$vivid-lime-green: #AAD922;
+$lime-green: #a1c734;
+$bronze-yellow: #6F7C12;
+$cafe-noir: #483519;
+$registration-black: #000000;
+
+$leaf-green: #1eb740;
+$light-leaf-green: #4ac566;
+$dark-leaf-green: #189233;
+
+$gray-text: #4f4f4f;
