--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,48 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="container text-center">
+    <h1>Bem Doado</h1>
+    <p>Troque as suas roupas de forma inteligente</p>
+    <a class="btn btn-flat btn-lg" href="#">Saiba mais</a>
+  </div>
+</div>
+
+<div class="container text-center gray-text-color">
+  <h3 class="call-to-action">Como funciona</h3>
+  <p class="description">Blá bla bla.</p>
+
+  <div class="row features">
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>AAAAAAAA</h5>
+        <p>ksdfkdhfhdsjfhjdsfh</p>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-video fa-lg"></i>
+        <h5>AAAAAAAA</h5>
+        <p>ksdfkdhfhdsjfhjdsfh</p>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="far fa-handshake fa-lg"></i>
+        <h5>AAAAAAAA</h5>
+        <p>ksdfkdhfhdsjfhjdsfh</p>
+      </div>
+  </div>
+</div>
+
+
+<!-- Contact -->
+<div class="container gray-text-color section_contact">
+  <div>
+    <p class="description call-to-action">Dúvidas? Deixe uma <a href="/contacts/new" target="_blank">mensagem</a> ou fale com agente:</p>
+  </div>
+  <div class="adjust-contact">
+    <ul>
+      <li>
+        <a href=""><i class="fas fa-envelope"></i>contato@bemdoado.com.br</a>
+      </li>
+      <li>
+        <a href=""><i class="fas fa-phone"></i>+55 (11) 9999-9999</a>
+      </li>
+    </ul>
+  </div>
+</div>
