--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <div class="banner">
   <div class="container text-center">
-    <h1>Bem Doado</h1>
-    <p>Troque as suas roupas de forma inteligente</p>
-    <a class="btn btn-flat btn-lg" href="#">Saiba mais</a>
+    <h1>Ih, Cresci!</h1>
+    <p>Venda e Compra roupas de crianças de forma inteligente</p>
+    <div class="button-home">
+      <a class="btn btn-flat btn-lg" href="#">Quero Vender</a>
+      <a class="btn btn-flat btn-lg" href="#">Quero Comprar</a>
+    </div>
   </div>
 </div>
 
@@ -38,7 +41,7 @@
   <div class="adjust-contact">
     <ul>
       <li>
-        <a href=""><i class="fas fa-envelope"></i>contato@bemdoado.com.br</a>
+        <a href=""><i class="fas fa-envelope"></i>contato@ihcresci.com.br</a>
       </li>
       <li>
         <a href=""><i class="fas fa-phone"></i>+55 (11) 9999-9999</a>
