--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="footer-copyright">
-    <i class="far fa-copyright"></i> Bem Doado - Todos os direitos reservados 2019
+    <i class="far fa-copyright"></i> Ih, Cresci! - Todos os direitos reservados 2019
   </div>
   <div class="footer-links">
     <a href="#"><i class="fab fa-twitter"></i></a>
