--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -1,8 +1,7 @@
 <div class="banner-contact">
   <div class="container text-center">
-    <h1 class="contact-header">Registramos o seu interesse.</h1>
-    <h1> Obrigada pela participação!</h1>
-    <!-- <div class="row contact-form">
+    <h2 class="contact-header">Fale com a gente</h2>
+    <div class="row contact-form">
       <div class="">
         <%= simple_form_for(@contact) do |f| %>
         <%= f.input :name, :label => "Nome" %>
@@ -12,7 +11,6 @@
         <%= f.button :submit, 'Enviar',  class: 'btn btn-form' %>
         <% end %>
       </div>
-    </div> -->
-    <div align=right><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-Zxy97cBbyB7dzcAB-45.gif' border='0' alt='contador de acesso'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=Zxy97cBbyB7dzcAB'></script></div>
+    </div>
   </div>
 </div>
