--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="container text-center">
     <h1>Ih, Cresci!</h1>
-    <p>Venda e Compra roupas de crianças de forma inteligente</p>
+    <p>Venda e compra de roupas de crianças de forma inteligente</p>
     <div class="button-home">
       <a class="btn btn-flat btn-lg" href="#">Quero Vender</a>
       <a class="btn btn-flat btn-lg" href="#">Quero Comprar</a>
@@ -32,11 +32,92 @@
   </div>
 </div>
 
+<div class="container text-center gray-text-color">
+  <h3 class="call-to-action">Produtos</h3>
+  <p class="description">Blá bla bla.</p>
+
+  <div class="row features">
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <i class="fas fa-calculator fa-lg"></i>
+        <h5>Nome do Produto</h5>
+        <p>Descrição</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+
+
+  </div>
+</div>
 
 <!-- Contact -->
 <div class="container gray-text-color section_contact">
   <div>
-    <p class="description call-to-action">Dúvidas? Deixe uma <a href="/contacts/new" target="_blank">mensagem</a> ou fale com agente:</p>
+    <!-- <p class="description call-to-action">Dúvidas? Deixe uma <a href="/contacts/new" target="_blank">mensagem</a> ou fale com agente:</p> -->
   </div>
   <div class="adjust-contact">
     <ul>
