--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -50,3 +50,24 @@
   opacity: .8;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+.contador {
+  padding-top: 425px;
+  // padding-left: -40px;
+  font-size: 5px;
+}
+
+.image-home {
+  height: 300px;
+  width: 200px;
+  border-radius: 5px;
+
+}
+
+.features h5 {
+  margin-top: 10px;
+}
+
+.price-home {
+  font-size: 12px;
+}
