--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,8 @@
 <div class="banner-contact">
   <div class="container text-center">
     <h1 class="contact-header">Registramos o seu interesse.</h1>
-    <h1> Obrigada pela participação!</h1>
+    <br/>
+    <h1 class="contact-header"> Obrigada pela participação!</h1>
     <!-- <div class="row contact-form">
       <div class="">
         <%= simple_form_for(@contact) do |f| %>
@@ -13,6 +14,6 @@
         <% end %>
       </div>
     </div> -->
-    <div align=right><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-Zxy97cBbyB7dzcAB-45.gif' border='0' alt='contador de acesso'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=Zxy97cBbyB7dzcAB'></script></div>
+    <div class="contador" align=right><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-Zxy97cBbyB7dzcAB-45.gif' border='0' alt='contador de acesso'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=Zxy97cBbyB7dzcAB'></script></div>
   </div>
 </div>
