--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
     <h1>Ih, Cresci!</h1>
     <p>Venda e compra de roupas de crianças de forma inteligente</p>
     <div class="button-home">
-      <a class="btn btn-flat btn-lg" href="#">Quero Vender</a>
-      <a class="btn btn-flat btn-lg" href="#">Quero Comprar</a>
+      <a class="btn btn-flat btn-lg" href="/contacts/new">Quero Vender</a>
+      <a class="btn btn-flat btn-lg" href="#product">Quero Comprar</a>
     </div>
   </div>
 </div>
@@ -32,84 +32,100 @@
   </div>
 </div>
 
-<div class="container text-center gray-text-color">
+<div class="container text-center gray-text-color" id="product">
   <h3 class="call-to-action">Produtos</h3>
   <p class="description">Blá bla bla.</p>
 
   <div class="row features">
       <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>Nome do Produto</h5>
-        <p>Descrição</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
+        <img src="/assets/image1.jpg" alt="" class="image-home">
+        <h5>Vestido Minnie</h5>
+        <p>Tamanho 6</p>
+        <p><strong>R$ 25,00</p></strong>
+        <p class="price-home">(4 x R$ 7,00)</p>
 
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image2.jpg" alt="" class="image-home">
+        <h5>Bolero Infantil Monbell</h5>
+        <p>Tamanho 6</p>
+        <p><strong>R$ 15,00</p></strong>
+        <p class="price-home">(4 x R$ 4,10)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image3.jpg" alt="" class="image-home">
+        <h5>Vestido manga longa Kyly</h5>
+        <p>Tamanho 6</p>
+        <p><strong>R$ 25,00</p></strong>
+        <p class="price-home">(4 x R$ 7,00)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image4.jpg" alt="" class="image-home">
+        <h5>Tenis Minnie</h5>
+        <p>Tamanho 26</p>
+        <p><strong>R$ 25,00</p></strong>
+        <p class="price-home">(4 x R$ 7,00)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image5.jpg" alt="" class="image-home">
+        <h5>Tenis Camim</h5>
+        <p>Tamanho 26</p>
+        <p><strong>R$ 30,00</p></strong>
+        <p class="price-home">(4 x R$ 8,00)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image6.jpg" alt="" class="image-home">
+        <h5>Bermuda Figurinha Girls</h5>
+        <p>Tamanho 6</p>
+        <p><strong>R$ 20,00</p></strong>
+        <p class="price-home">(4 x R$ 5,50)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image7.jpg" alt="" class="image-home">
+        <h5>Vestido Infantil Kamylus</h5>
+        <p>Tamanho 4</p>
+        <p><strong>R$ 25,00</p></strong>
+        <p class="price-home">(4 x R$ 7,00)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-12 col-lg-3 card-product">
+        <img src="/assets/image8.jpg" alt="" class="image-home">
+        <h5>Bermuda Lilica Ripilica</h5>
+        <p>Tamanho 6</p>
+        <p><strong>R$ 20,00</p></strong>
+        <p class="price-home">(4 x R$ 5,50)</p>
+        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+        <br/>
+        <br/>
+        <br/>
+      </div>
 
   </div>
 </div>
