--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,6 +14,6 @@
         <% end %>
       </div>
     </div> -->
-    <div class="contador" align=right><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-Zxy97cBbyB7dzcAB-45.gif' border='0' alt='contador de acesso'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=Zxy97cBbyB7dzcAB'></script></div>
+    <div align=right class="contador"><a href='https://www.counter12.com'><img src='https://www.counter12.com/img-62dx3a0D8Zbb4ZzA-45.gif' border='0' alt='contador de visitas'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=62dx3a0D8Zbb4ZzA'></script></div>
   </div>
 </div>
