--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>Ih, Cresci!</h1>
     <p>Venda e compra de roupas de crianças de forma inteligente</p>
     <div class="button-home">
-      <a class="btn btn-flat btn-lg" href="/contacts/new">Quero Vender</a>
+      <a class="btn btn-flat btn-lg" href="/contacts/index">Quero Vender</a>
       <a class="btn btn-flat btn-lg" href="#product">Quero Comprar</a>
     </div>
   </div>
@@ -62,7 +62,7 @@
       </div>
       <div class="col-12 col-lg-3 card-product">
         <img src="/assets/image3.jpg" alt="" class="image-home">
-        <h5>Vestido manga longa Kyly</h5>
+        <h5>Vestido Manga Longa Kyly</h5>
         <p>Tamanho 6</p>
         <p><strong>R$ 25,00</p></strong>
         <p class="price-home">(4 x R$ 7,00)</p>
