--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,7 +38,9 @@
 
   <div class="row features">
       <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image1.jpg" alt="" class="image-home">
+
+
+        <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image1.jpg" alt="" class="image-home">
         <h5>Vestido Minnie</h5>
         <p>Tamanho 6</p>
         <p><strong>R$ 25,00</p></strong>
