--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -44,6 +44,14 @@
   font-weight: bold;
 }
 
+.banner-ok h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 60px;
+  font-weight: bold;
+}
+
 .banner-contact p {
   font-size: 20px;
   color: white;
