--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="container text-center">
     <h1>Ih, Cresci!</h1>
-    <p>Venda e compra de roupas de crianças de forma inteligente</p>
+    <p>Roupas usadas para crianças</p>
     <div class="button-home">
       <a class="btn btn-flat btn-lg" href="/contacts/index">Quero Vender</a>
       <a class="btn btn-flat btn-lg" href="#product">Quero Comprar</a>
@@ -14,21 +14,21 @@
   <p class="description">Blá bla bla.</p>
 
   <div class="row features">
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-calculator fa-lg"></i>
-        <h5>AAAAAAAA</h5>
-        <p>ksdfkdhfhdsjfhjdsfh</p>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="fas fa-video fa-lg"></i>
-        <h5>AAAAAAAA</h5>
-        <p>ksdfkdhfhdsjfhjdsfh</p>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <i class="far fa-handshake fa-lg"></i>
-        <h5>AAAAAAAA</h5>
-        <p>ksdfkdhfhdsjfhjdsfh</p>
-      </div>
+    <div class="col-12 col-lg-3 card-product">
+      <i class="fas fa-calculator fa-lg"></i>
+      <h5>AAAAAAAA</h5>
+      <p>ksdfkdhfhdsjfhjdsfh</p>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <i class="fas fa-video fa-lg"></i>
+      <h5>AAAAAAAA</h5>
+      <p>ksdfkdhfhdsjfhjdsfh</p>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <i class="far fa-handshake fa-lg"></i>
+      <h5>AAAAAAAA</h5>
+      <p>ksdfkdhfhdsjfhjdsfh</p>
+    </div>
   </div>
 </div>
 
@@ -37,97 +37,158 @@
   <p class="description">Blá bla bla.</p>
 
   <div class="row features">
-      <div class="col-12 col-lg-3 card-product">
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image1.jpg" alt="" class="image-home">
+      <h5>Vestido Minnie</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 25,00</p></strong>
+      <p class="price-home">(4 x R$ 7,00)</p>
+
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image2.jpg" alt="" class="image-home">
+      <h5>Bolero Infantil Monbell</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 15,00</p></strong>
+      <p class="price-home">(4 x R$ 4,10)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image3.jpg" alt="" class="image-home">
+      <h5>Vestido Manga Longa Kyly</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 25,00</p></strong>
+      <p class="price-home">(4 x R$ 7,00)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834865/image4.jpg" alt="" class="image-home">
+      <h5>Tenis Minnie</h5>
+      <p>Tamanho 26</p>
+      <p><strong>R$ 25,00</p></strong>
+      <p class="price-home">(4 x R$ 7,00)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834865/image5.jpg" alt="" class="image-home">
+      <h5>Tenis Camim</h5>
+      <p>Tamanho 26</p>
+      <p><strong>R$ 30,00</p></strong>
+      <p class="price-home">(4 x R$ 8,00)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834865/image6.jpg" alt="" class="image-home">
+      <h5>Bermuda Figurinha Girls</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 20,00</p></strong>
+      <p class="price-home">(4 x R$ 5,50)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image7.jpg" alt="" class="image-home">
+      <h5>Vestido Infantil Kamylus</h5>
+      <p>Tamanho 4</p>
+      <p><strong>R$ 25,00</p></strong>
+      <p class="price-home">(4 x R$ 7,00)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image10.jpg" alt="" class="image-home">
+      <h5>Bermuda Lilica Ripilica</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 20,00</p></strong>
+      <p class="price-home">(4 x R$ 5,50)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
 
 
-        <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834866/image1.jpg" alt="" class="image-home">
-        <h5>Vestido Minnie</h5>
-        <p>Tamanho 6</p>
-        <p><strong>R$ 25,00</p></strong>
-        <p class="price-home">(4 x R$ 7,00)</p>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558842781/image11.jpg" alt="" class="image-home">
+      <h5>Saco de Dormir Carter's</h5>
+      <p>Material: Fleece</p>
+      <p><strong>R$ 15,00</p></strong>
+      <p class="price-home">(4 x R$ 4,10)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
 
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image2.jpg" alt="" class="image-home">
-        <h5>Bolero Infantil Monbell</h5>
-        <p>Tamanho 6</p>
-        <p><strong>R$ 15,00</p></strong>
-        <p class="price-home">(4 x R$ 4,10)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image3.jpg" alt="" class="image-home">
-        <h5>Vestido Manga Longa Kyly</h5>
-        <p>Tamanho 6</p>
-        <p><strong>R$ 25,00</p></strong>
-        <p class="price-home">(4 x R$ 7,00)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image4.jpg" alt="" class="image-home">
-        <h5>Tenis Minnie</h5>
-        <p>Tamanho 26</p>
-        <p><strong>R$ 25,00</p></strong>
-        <p class="price-home">(4 x R$ 7,00)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image5.jpg" alt="" class="image-home">
-        <h5>Tenis Camim</h5>
-        <p>Tamanho 26</p>
-        <p><strong>R$ 30,00</p></strong>
-        <p class="price-home">(4 x R$ 8,00)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image6.jpg" alt="" class="image-home">
-        <h5>Bermuda Figurinha Girls</h5>
-        <p>Tamanho 6</p>
-        <p><strong>R$ 20,00</p></strong>
-        <p class="price-home">(4 x R$ 5,50)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image7.jpg" alt="" class="image-home">
-        <h5>Vestido Infantil Kamylus</h5>
-        <p>Tamanho 4</p>
-        <p><strong>R$ 25,00</p></strong>
-        <p class="price-home">(4 x R$ 7,00)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-12 col-lg-3 card-product">
-        <img src="/assets/image8.jpg" alt="" class="image-home">
-        <h5>Bermuda Lilica Ripilica</h5>
-        <p>Tamanho 6</p>
-        <p><strong>R$ 20,00</p></strong>
-        <p class="price-home">(4 x R$ 5,50)</p>
-        <a class="btn btn-flat" href="/contacts/new">Comprar</a>
-        <br/>
-        <br/>
-        <br/>
-      </div>
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558842782/image13.jpg" alt="" class="image-home">
+      <h5>Meia Infantil Pimpolho</h5>
+      <p>Cano Longo - Tam: 16</p>
+      <p><strong>R$ 15,00</p></strong>
+      <p class="price-home">(4 x R$ 4,10)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558842782/image12.jpg" alt="" class="image-home">
+      <h5>Calça Jeans Carter's</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 20,00</p></strong>
+      <p class="price-home">(4 x R$ 5,50)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558842782/image15.jpg" alt="" class="image-home">
+      <h5>Jardineira Listras Carter´s</h5>
+      <p>Tamanho 6</p>
+      <p><strong>R$ 25,00</p></strong>
+      <p class="price-home">(4 x R$ 7,00)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+
+    <div class="col-12 col-lg-3 card-product">
+      <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558843128/image17.jpg" alt="" class="image-home">
+      <h5>Almofada Amamentação</h5>
+      <p>Chevron Azul</p>
+      <p><strong>R$ 15,00</p></strong>
+      <p class="price-home">(4 x R$ 4,10)</p>
+      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+
 
   </div>
 </div>
