--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,3 +16,10 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.logo-navbar {
+  border-radius: 50px;
+  height: 90px;
+  // // width: 100px;
+
+}
