--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,7 @@
    <!--  <i class="fas fa-child"></i>
     <i class="fas fa-baby"></i> -->
     <%= image_tag "" %>
+    <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558845453/exercicio1-girafa.png" class="">
     <% end %>
 
   <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
