--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-.btn-flat {
+.btn-flat-product {
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
@@ -6,7 +6,7 @@
   transition: background 0.3s ease;
 }
 
-.btn-flat:hover {
+.btn-flat-product:hover {
   background: $lime-green;
   color: white;
 }
@@ -27,4 +27,19 @@
 
 .button-home a {
   margin: 20px;
+}
+
+.btn-flat {
+  color: white;
+  padding: 8px 24px;
+  // border-radius: 4px;
+  border: solid rgba(255, 255, 255, 1) 2px;
+  background: transparent;
+  transition: background 0.3s ease;
+  margin-top: 20px;
+}
+
+.btn-flat:hover {
+  background: white;
+  color: black;
 }
