--- a/app/assets/stylesheets/components/_contact_form.scss
+++ b/app/assets/stylesheets/components/_contact_form.scss
@@ -44,8 +44,8 @@ form > button {
 
 
 .contact-header{
-  color: white;
-  font-size: 10px;
+  // color: white;
+  // font-size: 10px;
   // margin-top: -40px;
 }
 
