--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,30 +11,34 @@
 
 <div class="container text-center gray-text-color">
   <h3 class="call-to-action">Como funciona</h3>
-  <p class="description">Blá bla bla.</p>
+
+
+
 
   <div class="row features">
     <div class="col-12 col-lg-3 card-product">
-      <i class="fas fa-calculator fa-lg"></i>
-      <h5>AAAAAAAA</h5>
-      <p>ksdfkdhfhdsjfhjdsfh</p>
-    </div>
-    <div class="col-12 col-lg-3 card-product">
-      <i class="fas fa-video fa-lg"></i>
-      <h5>AAAAAAAA</h5>
-      <p>ksdfkdhfhdsjfhjdsfh</p>
+      <i class="fas fa-bullhorn fa-lg"></i>
+      <h5>Bora Anunciar</h5>
+      <p class="description">Selecione o que ficou pequeno e quer desapegar, coloque o preço e anuncie. Nos preços que anunciar, lembre-se de que será descontada uma pequena tarifa do site... 20% (*) do valor final.</p>
     </div>
     <div class="col-12 col-lg-3 card-product">
       <i class="far fa-handshake fa-lg"></i>
-      <h5>AAAAAAAA</h5>
-      <p>ksdfkdhfhdsjfhjdsfh</p>
+      <h5>Viva! Vendi! E agora?</h5>
+      <p>Embrulha e despacha!!! Faça com bastante carinho e não esqueça da etiqueta de postagem hein? Nos correios peça sempre SEDEX com aviso de recebimento.</p>
+    </div>
+    <div class="col-12 col-lg-3 card-product">
+      <i class="fas fa-hand-holding-usd fa-lg"></i>
+      <h5>Chegou!</h5>
+      <p>Assim que a nova família receber seu produto, o saque dos valores já estará disponível para você. </p>
     </div>
   </div>
+  <p class="asterisco">(*) 20% de todo valor arrecadado com a tarifa será revertido para projetos beneficentes necessariamente conectados à primeira infância. Os comprovantes deste destino serão mensalmente publicados no site e auditados por consultoria independente.</p>
 </div>
+
 
 <div class="container text-center gray-text-color" id="product">
   <h3 class="call-to-action">Produtos</h3>
-  <p class="description">Blá bla bla.</p>
+  <!-- <p class="description">Blá bla bla.</p> -->
 
   <div class="row features">
     <div class="col-12 col-lg-3 card-product">
@@ -44,7 +48,7 @@
       <p><strong>R$ 25,00</p></strong>
       <p class="price-home">(4 x R$ 7,00)</p>
 
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -55,7 +59,7 @@
       <p>Tamanho 6</p>
       <p><strong>R$ 15,00</p></strong>
       <p class="price-home">(4 x R$ 4,10)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -66,29 +70,29 @@
       <p>Tamanho 6</p>
       <p><strong>R$ 25,00</p></strong>
       <p class="price-home">(4 x R$ 7,00)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
     </div>
     <div class="col-12 col-lg-3 card-product">
       <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834865/image4.jpg" alt="" class="image-home">
-      <h5>Tenis Minnie</h5>
+      <h5>Tênis Minnie</h5>
       <p>Tamanho 26</p>
       <p><strong>R$ 25,00</p></strong>
       <p class="price-home">(4 x R$ 7,00)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
     </div>
     <div class="col-12 col-lg-3 card-product">
       <img src="https://res.cloudinary.com/db83kcqu5/image/upload/v1558834865/image5.jpg" alt="" class="image-home">
-      <h5>Tenis Camim</h5>
+      <h5>Tênis Camim</h5>
       <p>Tamanho 26</p>
       <p><strong>R$ 30,00</p></strong>
       <p class="price-home">(4 x R$ 8,00)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -99,7 +103,7 @@
       <p>Tamanho 6</p>
       <p><strong>R$ 20,00</p></strong>
       <p class="price-home">(4 x R$ 5,50)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -110,7 +114,7 @@
       <p>Tamanho 4</p>
       <p><strong>R$ 25,00</p></strong>
       <p class="price-home">(4 x R$ 7,00)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -122,7 +126,7 @@
       <p>Tamanho 6</p>
       <p><strong>R$ 20,00</p></strong>
       <p class="price-home">(4 x R$ 5,50)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -135,7 +139,7 @@
       <p>Material: Fleece</p>
       <p><strong>R$ 15,00</p></strong>
       <p class="price-home">(4 x R$ 4,10)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -147,7 +151,7 @@
       <p>Cano Longo - Tam: 16</p>
       <p><strong>R$ 15,00</p></strong>
       <p class="price-home">(4 x R$ 4,10)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -159,7 +163,7 @@
       <p>Tamanho 6</p>
       <p><strong>R$ 20,00</p></strong>
       <p class="price-home">(4 x R$ 5,50)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -171,7 +175,7 @@
       <p>Tamanho 6</p>
       <p><strong>R$ 25,00</p></strong>
       <p class="price-home">(4 x R$ 7,00)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -183,7 +187,7 @@
       <p>Chevron Azul</p>
       <p><strong>R$ 15,00</p></strong>
       <p class="price-home">(4 x R$ 4,10)</p>
-      <a class="btn btn-flat" href="/contacts/new">Comprar</a>
+      <a class="btn btn-flat-product" href="/contacts/new">Comprar</a>
       <br/>
       <br/>
       <br/>
@@ -193,19 +197,3 @@
   </div>
 </div>
 
-<!-- Contact -->
-<div class="container gray-text-color section_contact">
-  <div>
-    <!-- <p class="description call-to-action">Dúvidas? Deixe uma <a href="/contacts/new" target="_blank">mensagem</a> ou fale com agente:</p> -->
-  </div>
-  <div class="adjust-contact">
-    <ul>
-      <li>
-        <a href=""><i class="fas fa-envelope"></i>contato@ihcresci.com.br</a>
-      </li>
-      <li>
-        <a href=""><i class="fas fa-phone"></i>+55 (11) 9999-9999</a>
-      </li>
-    </ul>
-  </div>
-</div>
