--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -40,8 +40,9 @@
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 60px;
+  font-size: 40px;
   font-weight: bold;
+  padding-top: 40px;
 }
 
 .banner-ok h1 {
@@ -77,5 +78,9 @@
 }
 
 .price-home {
+  font-size: 12px;
+}
+
+.asterisco {
   font-size: 12px;
 }
